<resources>
    <string name="app_name">Coderbyte Challange</string>
    <string name="profile_creation">Profile Creation</string>
    <string name="help_text">Use the form below to submit your portfolio.\nAn email and password are required. </string>
    <string name="first_name">First Name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="website">Website</string>
    <string name="submit">Submit</string>
    <string name="tap_to_add_avatar">Tap to add avatar</string>
    <string name="validation_error">Please fill required field*</string>
    <string name="permission_required">Permission required</string>
    <string name="please_grant_all_permissions_to_use_this_app">Please grant all permissions to use this app</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="hello">Hello %1$s!</string>
    <string name="confirmation_message">Your super-awesome portfolio has been \nsuccessfully submitted! The preview below is \nwhat the community will see</string>
    <string name="sign_in">Sign in</string>
</resources>