<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.features.signup.SignUpFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/profile_creation"
        android:textSize="@dimen/header_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/help_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/help_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/title_tv" />

    <androidx.cardview.widget.CardView
        android:id="@+id/avatar_cv"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/max_margin"
        app:cardCornerRadius="@dimen/corner_radius"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/help_tv">

        <TextView
            android:id="@+id/card_description_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/tap_to_add_avatar"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/avatar_iv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:visibility="gone" />

    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/name_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/min_margin"
        android:background="@drawable/background_shape"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="text"
        android:padding="@dimen/sign_tv_padding"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/avatar_cv" />

    <EditText
        android:id="@+id/email_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/min_margin"
        android:background="@drawable/background_shape"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="@dimen/sign_tv_padding"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/name_et" />

    <EditText
        android:id="@+id/password_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/min_margin"
        android:background="@drawable/background_shape"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="@dimen/sign_tv_padding"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/email_et" />

    <EditText
        android:id="@+id/web_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_shape"
        android:ems="10"
        android:hint="@string/website"
        android:padding="@dimen/sign_tv_padding"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/password_et" />

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/medium_margin"
        android:background="@drawable/button_shape"
        android:padding="@dimen/sign_tv_padding"
        android:text="@string/submit"
        android:theme="@style/Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left" />

</androidx.constraintlayout.widget.ConstraintLayout>