<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.features.confirmation.ConfirmationFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:textSize="@dimen/header_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/help_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/confirmation_message"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/title_tv" />

    <androidx.cardview.widget.CardView
        android:id="@+id/avatar_cv"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/max_margin"
        app:cardCornerRadius="@dimen/corner_radius"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/help_tv">

        <ImageView
            android:id="@+id/avatar_iv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/profile_avatar" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/name_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/min_margin"
        android:background="@drawable/background_shape"
        android:gravity="center"
        android:hint="@string/first_name"
        android:padding="@dimen/sign_tv_padding"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/web_et" />

    <TextView
        android:id="@+id/email_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/min_margin"
        android:background="@drawable/background_shape"
        android:gravity="center"
        android:hint="@string/email_address"
        android:padding="@dimen/sign_tv_padding"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/name_et" />

    <TextView
        android:id="@+id/web_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_shape"
        android:gravity="center"
        android:hint="@string/website"
        android:padding="@dimen/sign_tv_padding"
        android:textAppearance="@style/MyLinkTextStyle"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/avatar_cv" />

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/medium_margin"
        android:background="@drawable/button_shape"
        android:padding="@dimen/sign_tv_padding"
        android:text="@string/sign_in"
        android:theme="@style/Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left" />

</androidx.constraintlayout.widget.ConstraintLayout>